--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
+  workflow_dispatch:
 
 env:
   ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
@@ -49,5 +50,5 @@ jobs:
    # - name: Terraform Apply
     #  run: terraform apply -auto-approve
 
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve
+   # - name: Terraform Destroy
+    #  run: terraform destroy -auto-approve
