--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,9 @@
 name: 'Terraform test JM'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
+#  push:
+#    branches: [ "main" ]
+#  pull_request:
   workflow_dispatch:
 
 env:
