--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
-  #ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+  ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
   ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
   ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
   ROOT_PATH: ${{github.workspace}}
@@ -23,7 +23,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    permissions:
+    #permissions:
       id-token: write
       contents: read
 
@@ -38,12 +38,12 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    - name: azlogin
-      uses: azure/login@v1
-      with:
-        client-id: ${{secrets.AZURE_CLIENT_ID}}
-        tenant-id: ${{secrets.AZURE_TENANT_ID}}
-        subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+    #- name: azlogin
+     # uses: azure/login@v1
+      #with:
+       # client-id: ${{secrets.AZURE_CLIENT_ID}}
+        #tenant-id: ${{secrets.AZURE_TENANT_ID}}
+        #subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
   
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
