--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,8 +24,8 @@ jobs:
       run:
         shell: bash
     #permissions:
-      id-token: write
-      contents: read
+      #id-token: write
+      #contents: read
 
     steps:
     # Checkout the repository to the GitHub Actions runner
