--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,12 +38,12 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    #- name: azlogin
-     # uses: azure/login@v1
-      #with:
-       # client-id: ${{secrets.AZURE_CLIENT_ID}}
-        #tenant-id: ${{secrets.AZURE_TENANT_ID}}
-        #subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+    - name: azlogin
+      uses: azure/login@v1
+      with:
+        client-id: ${{secrets.AZURE_CLIENT_ID}}
+        tenant-id: ${{secrets.AZURE_TENANT_ID}}
+        subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
   
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
