--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,7 @@ env:
   ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
   ROOT_PATH: ${{github.workspace}}
   ARM_USE_OIDC: true
+  ARM_USE_MSI: true
 
 jobs:
   terraform:
