--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,7 +54,7 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan
+      run: terraform plan -no-color
       working-directory: ${{env.ROOT_PATH}}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
