--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,6 +55,12 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -no-color
       working-directory: ${{env.ROOT_PATH}}
+      env:
+        ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+        ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+        ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+        ROOT_PATH: ${{github.workspace}}
+        ARM_USE_OIDC: true
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
