--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,7 +26,7 @@ jobs:
         shell: bash
     permissions:
       id-token: write
-      contents: write
+      contents: read
 
     steps:
     # Checkout the repository to the GitHub Actions runner
