--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
 env:
   ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
   #ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
-  ARM_OBJECT_ID: ${{secrets.AZURE_OBJECT_ID}}
+  #ARM_OBJECT_ID: ${{secrets.AZURE_OBJECT_ID}}
   ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
   ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
   ROOT_PATH: ${{github.workspace}}
@@ -58,7 +58,7 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -no-color
+      run: terraform plan
       working-directory: ${{env.ROOT_PATH}}
       
       # On push to "main", build or change infrastructure according to Terraform configuration files
